--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,4 +2,4 @@
 deployment:
   tasks:
     - export DEPL2=/home/aulacomu/public_html/a
-    - rsync -a -F c1 $DEPL2
+    - /bin/rsync -a -F c1 $DEPL2
