--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,5 +1,5 @@
 ---
 deployment:
   tasks:
-    - export DEPL2=/home/aulacomu/public_html/a
-    - /bin/rsync -a -F c1 $DEPL2
+    - export DEPL2=/home/aulacomu/public_html/a/
+    - /bin/rsync -anv ./c1 $DEPL2
